--- a/BuhUchetTest/Templates/new_pass_alert.html
+++ b/BuhUchetTest/Templates/new_pass_alert.html
@@ -4,7 +4,7 @@
     <tr>
         <td>
             <h1>"Уведомление о смене пароля"</h1>
-            <p>Уважаемый пользователь ваш пароль был изменен на {{ new_password }}</p>
+            <p>Уважаемый пользователь! Ваш пароль был изменен на {{ new_password }}</p>
             <p>Для входа на сайт используйте новый пароль</p>
         </td>
     </tr>
